@@ -8,7 +8,7 @@ organization := "com.gilt"
 
 scalaVersion := "2.10.5"
 
-libraryDependencies += "com.amazonaws" % "aws-java-sdk-cloudformation" % "1.9.38"
+libraryDependencies += "com.amazonaws" % "aws-java-sdk-cloudformation" % "1.9.40"
 
 publishTo := {
   val nexus = "https://nexus.gilt.com/nexus/"
@@ -23,15 +23,3 @@ credentials += Credentials("Sonatype Nexus Repository Manager", "nexus.gilt.com"
 licenses += ("MIT", url("http://opensource.org/licenses/MIT"))
 
 scalacOptions += "-deprecation"
-
-crossBuildingSettings
-
-CrossBuilding.crossSbtVersions := Seq("0.13")
-
-CrossBuilding.scriptedSettings
-
-scriptedLaunchOpts <<= (scriptedLaunchOpts, version) { case (s,v) => s ++
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + v)
-}
-
-scriptedBufferLog := false
